# memoryframe

./: CMakeLists.txt  Frame.cpp  Frame.hpp  FrameEntity.cpp  FrameEntity.hpp  LICENSE  README.md  Test Results - All_in_MemoryFrame.html  frame_tests.cpp  tests_main.cpp
